drlm (2.4.10) stable release; urgency=high
  * Bugfix in installclient tunnig_rear function
  * Bugfix avoid duplicate settings in /etc/drlm/local.conf during update or install process
  * Bugfix in user deletion to skip error code 12
  * NEW! XML/JSON error reporting supported
  * Bugfix in impbackup client configuration

 -- Pau Roura <pau@brainupdaters.net>  Fri, 10 Feb 2023 00:00:00 +0100

drlm (2.4.9) stable release; urgency=high
  * Bugfix in importbackup Debian nbd detach
  * Bugfix getting Client OS version fixed
  * Bugfix sending DRLM server hostname
  * Bugfix getting SSH_ROOT_PASSWORD from local.conf or site.conf

 -- Pau Roura <pau@brainupdaters.net>  Thu, 24 Nov 2022 00:00:00 +0100

drlm (2.4.8) stable release; urgency=high
  * RedHat 5 client support
  * Avoiding Debian nbd detach errors with nbd-client

 -- Pau Roura <pau@brainupdaters.net>  Mon, 21 Nov 2022 00:00:00 +0100

drlm (2.4.7) stable release; urgency=high
  * Bugfix removing authorized keys
  * Bugfix in installclient DRLM Proxy (hostname unreachable)
  * Improved unsched client sql select
  * Changed default QEMU_NBD_OPTIONS
  * Mutex race solved in nbd assignment
  * Improved network, client, backup and job lists
  * Bugfix in DRLM PROXY ReaR URL generation

 -- Pau Roura <pau@brainupdaters.net>  Mon, 14 Nov 2022 00:00:00 +0100

drlm (2.4.6) stable release; urgency=high
  * Bugfix in deb package update
  
 -- Pau Roura <pau@brainupdaters.net>  Wed, 21 Sep 2022 00:00:00 +0100

drlm (2.4.5) stable release; urgency=high
  * NEW! Improved jobs list with status feedback
  * NEW! Now is possible to enable and disable Jobs
  * Speedup list client
  * Bugfix in addclient (two MACs one IP)
  * Bugfix in addnetwork (two interface for one IP)
  * Improve run sched backups

 -- Pau Roura <pau@brainupdaters.net>  Fri, 22 Jul 2022 00:00:00 +0100

drlm (2.4.4) stable release; urgency=high
  * Bugfix in install client, new dependencies added
  * Bugfix in logs maintenance