@@ -21,8 +21,8 @@
 # Backup type ISO generates a rescue image in ISO format and backup data is stored
 # in a DRLM server directory.
 #
-# DRLM_BKP_TYPE=ISO (Default)
-#  |-- DRLM_BKP_PROT=RSYNC (Default)
+# DRLM_BKP_TYPE=ISO #(Default)
+#  |-- DRLM_BKP_PROT=RSYNC #(Default)
 #  |-- DRLM_BKP_PROT=NETFS
 #       |-- DRLM_BKP_PROG=TAR
 #       |-- DRLM_BKP_PROG=RSYNC
@@ -51,7 +51,7 @@
 # may be useful to use it by enabling incremental backups, DRLM_INCREMENTAL, also described below.
 #
 # DRLM_BKP_TYPE=DATA
-#  |-- DRLM_BKP_PROT=RSYNC (Default)
+#  |-- DRLM_BKP_PROT=RSYNC #(Default)
 #  |-- DRLM_BKP_PROT=NETFS
 #      |-- DRLM_BKP_PROG=TAR
 #      |-- DRLM_BKP_PROG=RSYNC
