@@ -4,6 +4,8 @@ drlm (2.4.10) stable release; urgency=high
   * Bugfix in user deletion to skip error code 12
   * NEW! XML/JSON error reporting supported
   * Bugfix in impbackup client configuration
+  * Bugfix runbackup umounting previous backups 
+  * Bugfix runbackup rsync hidden warning errors
 
  -- Pau Roura <pau@brainupdaters.net>  Fri, 10 Feb 2023 00:00:00 +0100
 
